# eo-embeddings-ml-system

./: .gitignore  README.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py  schemas.py  storage.py
apps/api/app/services/: __init__.py  earth_engine.py  embeddings.py  models.py
apps/web/: app.js  index.html  styles.css
docs/: alphaearth-earth-engine-workflow.md  system-design.md
