[project]
name = "eo-embeddings-api"
version = "0.1.0"
description = "FastAPI backend for few-shot EO embedding mapping."
requires-python = ">=3.10"
dependencies = [
    "earthengine-api>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "numpy>=1.26",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
earthengine = [
    "geemap>=0.34",
]

[tool.ruff]
line-length = 100
